--- a/config.env
+++ b/config.env
@@ -62,7 +62,7 @@ MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
 # QBITTORRENT
 QB_BASE_URL = "" 
-QB_SERVER_PORT = "" 
+QB_SERVER_PORT = "8080" 
 WEB_PINCODE = "" 
 # TORRENT SEARCH
 SEARCH_API_LINK = ""
